[package]
name = "mindload"
version = "2.0.0"
description = "App para descargar videos y musica de YouTube y Spotify"
authors = ["IAMLUZY"]
edition = "2021"

[lib]
name = "mindload_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["rustls-tls"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dirs = "5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
